--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -13,9 +13,8 @@
   <link rel="stylesheet" href="{% static 'vendors/css/vendor.bundle.base.css' %}">
   <!-- endinject -->
   <!-- Plugin css for this page -->
-  <link rel="stylesheet" href="{% static 'vendors/datatables.net-bs4/dataTables.bootstrap4.css' %}">
-  <link rel="stylesheet" href="{% static 'vendors/ti-icons/css/themify-icons.css' %}">
-  <link rel="stylesheet" type="text/css" href="{% static 'js/select.dataTables.min.css' %}">
+  {% block plugin_css %}
+  {% endblock %}
   <!-- End plugin css for this page -->
   <!-- inject:css -->
   <link rel="stylesheet" href="{% static 'css/vertical-layout-light/style.css' %}">
@@ -335,10 +334,8 @@
   <script src="{% static 'vendors/js/vendor.bundle.base.js' %}"></script>
   <!-- endinject -->
   <!-- Plugin js for this page -->
-  <script src="{% static 'vendors/chart.js/Chart.min.js' %}"></script>
-  <script src="{% static 'vendors/datatables.net/jquery.dataTables.js' %}"></script>
-  <script src="{% static 'vendors/datatables.net-bs4/dataTables.bootstrap4.js' %}"></script>
-  <script src="{% static 'js/dataTables.select.min.js' %}"></script>
+  {% block plugin_js %}
+  {% endblock %}
   <!-- End plugin js for this page -->
   <!-- inject:js -->
   <script src="{% static 'js/off-canvas.js' %}"></script>
@@ -348,8 +345,8 @@
   <script src="{% static 'js/todolist.js' %}"></script>
   <!-- endinject -->
   <!-- Custom js for this page-->
-  <script src="{% static 'js/dashboard.js' %}"></script>
-  <script src="{% static 'js/Chart.roundedBarCharts.js' %}"></script>
+  {% block custom_js %}
+  {% endblock %}
   <!-- End custom js for this page-->
 </body>
 
