--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,7 +1,24 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block plugin_css%}
+<link rel="stylesheet" href="{% static 'vendors/datatables.net-bs4/dataTables.bootstrap4.css' %}">
+<link rel="stylesheet" href="{% static 'vendors/ti-icons/css/themify-icons.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'js/select.dataTables.min.css' %}">
+{% endblock %}
 {% block contain %}
 {% endblock %}
 {% block nav %}
 {% include 'nav_home.html' %}
+{% endblock %}
+
+{% block plugin_js %}
+<script src="{% static 'vendors/chart.js/Chart.min.js' %}"></script>
+<script src="{% static 'vendors/datatables.net/jquery.dataTables.js' %}"></script>
+<script src="{% static 'vendors/datatables.net-bs4/dataTables.bootstrap4.js' %}"></script>
+<script src="{% static 'js/dataTables.select.min.js' %}"></script>
+{% endblock %}
+
+{% block custom_js %}
+<script src="{% static 'js/dashboard.js' %}"></script>
+<script src="{% static 'js/Chart.roundedBarCharts.js' %}"></script>
 {% endblock %}
