--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -32,26 +32,53 @@
               </div>
               <h4>New here?</h4>
               <h6 class="font-weight-light">Signing up is easy. It only takes a few steps</h6>
-              <form class="pt-3">
+              <form class="pt-3" method='post'>
+                {% csrf_token %}
                 <div class="form-group">
                   {% comment %} <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Username"> {% endcomment %}
                   {{form.username}}
                 </div>
                 <div class="form-group">
-                  <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email">
+                  {{form.first_name}}
                 </div>
                 <div class="form-group">
-                  <select class="form-control form-control-lg" id="exampleFormControlSelect2">
-                    <option>Country</option>
-                    <option>United States of America</option>
-                    <option>United Kingdom</option>
-                    <option>India</option>
-                    <option>Germany</option>
-                    <option>Argentina</option>
-                  </select>
+                  {{form.last_name}}
                 </div>
                 <div class="form-group">
-                  <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
+                  {{form.email}}
+                </div>
+                <div class="form-group">
+                  {{form.nombre_empresa}}
+                </div>
+                <div class="form-group">
+                  {{form.razon_social}}
+                </div>
+                <div class="form-group">
+                  {{form.cuit}}
+                </div>
+                <div class="form-group">
+                  {{form.pais}}
+                </div>
+                <div class="form-group">
+                  {{form.direccion1}}
+                </div>
+                <div class="form-group">
+                  {{form.direccion2}}
+                </div>
+                <div class="form-group">
+                  {{form.telefono}}
+                </div>
+                <div class="form-group">
+                  {{form.celular}}
+                </div>
+                <div class="form-group">
+                  {{form.password1}}
+                </div>
+                <div class="form-group">
+                  {{form.password2}}
+                </div>
+                <div class="form-group">
+                  {{form.observaciones}}
                 </div>
                 <div class="mb-4">
                   <div class="form-check">
@@ -62,7 +89,7 @@
                   </div>
                 </div>
                 <div class="mt-3">
-                  <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="../../index.html">SIGN UP</a>
+                  <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">SIGN UP</button>
                 </div>
                 <div class="text-center mt-4 font-weight-light">
                   Already have an account? <a href="/login" class="text-primary">Login</a>
