--- a/core/templates/personal_details.html
+++ b/core/templates/personal_details.html
@@ -16,7 +16,7 @@
             <div class="form-group row">
               <label class="col-sm-3 col-form-label">First Name</label>
               <div class="col-sm-9">
-                <input type="text" class="form-control" />
+                {{form.nombre}}
               </div>
             </div>
           </div>
