--- a/core/templates/personal_details.html
+++ b/core/templates/personal_details.html
@@ -4,18 +4,13 @@
 {% endblock %}                          
 {% block content %} 
 {% if messages %}
-    {% for message in messages %}
-        <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
-            {{ message }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-    {% endfor %}
+{% include 'mensajes.html' %}
 {% endif %}
 <div class="col-12 grid-margin">
   <div class="card">
     <div class="card-body">
       <h4 class="card-title">Actualizacion de datos</h4>
-      <form class="form-sample" method='post'>
+      <form class="form-sample" method='post' enctype="multipart/form-data">
         {% csrf_token %}
         <p class="card-description">
           Datos personales
