--- a/core/templates/nav_home.html
+++ b/core/templates/nav_home.html
@@ -14,12 +14,14 @@
   <li class="nav-item">
     <a class="nav-link" data-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
       <i class="icon-columns menu-icon"></i>
-      <span class="menu-title">Form elements</span>
+      <span class="menu-title">Productos</span>
       <i class="menu-arrow"></i>
     </a>
     <div class="collapse" id="form-elements">
       <ul class="nav flex-column sub-menu">
-        <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Basic Elements</a></li>
+        <li class="nav-item"><a class="nav-link" href="/02-tipo">Tipos</a></li>
+        <li class="nav-item"><a class="nav-link" href="/02-rubro">Rubros</a></li>
+        <li class="nav-item"><a class="nav-link" href="/02">Productos</a></li>
       </ul>
     </div>
   </li>
