--- a/core/templates/vista_producto.html
+++ b/core/templates/vista_producto.html
@@ -3,39 +3,57 @@
 {% block plugin_css%}
 {% endblock %}                          
 {% block content %} 
-{% include 'mensajes.html' %}
 <div class="col-12 grid-margin">
   <div class="card">
     <div class="card-body">
         {% include 'mensajes.html' %}
-      <h4 class="card-title">Lote</h4>
+      <h4 class="card-title">Producto</h4>
       <form class="form-sample" method='post' enctype="multipart/form-data">
         {% csrf_token %}
         <p class="card-description">
           Informacion general
         </p>
-        {{ form.non_field_errors }}
         <div class="row">
           <div class="col-md-6">
             <div class="form-group row">
-              <label class="col-sm-3 col-form-label">Campo</label>
+              <label class="col-sm-3 col-form-label">Codigo</label>
               <div class="col-sm-9">
-                {{form.campo}}
-                {{form.campo.errors}}
+                {{form.codigo}}
+                {{form.codigo.errors}}
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group row">
-              <label class="col-sm-3 col-form-label">Nombre</label>
+              <label class="col-sm-3 col-form-label">Descripcion</label>
               <div class="col-sm-9">
-                {{form.nombre}}
-                {{form.nombre.erros}}
+                {{form.descripcion}}
+                {{form.descripcion.errors}}
               </div>
             </div>
           </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-6">
+              <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Tipo</label>
+                <div class="col-sm-9">
+                  {{form.tipo}}
+                  {{form.tipo.errors}}
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Rubro</label>
+                <div class="col-sm-9">
+                    {{form.rubro}}
+                    {{form.rubro.errors}}
+                </div>
+              </div>
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-6">
               <div class="form-group row">
@@ -52,35 +70,34 @@
                 <div class="col-sm-9">
                     <div class='card'>
                       {% if modificacion %}
-                        <img id= 'id_preview' src={{registro_lote.image.url}} alt="">
+                        <img id= 'id_preview' src={{prod.image.url}} alt="">
                       {% else %}
                         <img id= 'id_preview' src="" alt="">
-                      {% endif %}
-                    </div>
+                        {% endif %}
+                      </div>
                 </div>
               </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
-              <div class="form-group row">
-                <label class="col-sm-3 col-form-label">Has Totales</label>
-                <div class="col-sm-9">
-                    {{form.ha_totales}}
-                    {{form.ha_totales.errors}}
-                </div>
+          <div class="col-md-6">
+            <div class="form-group row">
+              <label class="col-sm-3 col-form-label">Status</label>
+              <div class="col-sm-9">
+                {{form.status}}
+                {{form.status.errors}}
               </div>
             </div>
-            <div class="col-md-6">
-              <div class="form-group row">
-                <label class="col-sm-3 col-form-label">Has Productivas</label>
-                <div class="col-sm-9">
-                    {{form.ha_productivas}}
-                    {{form.ha_productivas.errors}}
-                </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group row">
+              <label class="col-sm-3 col-form-label">Futuro uso</label>
+              <div class="col-sm-9">
               </div>
             </div>
-        </div>
+          </div>
+      </div>
+
   
         {% if modificacion %}
         <button type="submit" name='ok' class="btn btn-primary mr-2">Actualizar</button>
@@ -88,7 +105,7 @@
         {% else %}
         <button type="submit" name='ok' class="btn btn-primary mr-2">Nuevo</button>
         {% endif %}
-        <button type='button' class="btn btn-dark" onclick="window.location.href='/0101';">Cancel</button>
+        <button type='button' class="btn btn-dark" onclick="window.location.href='/02';">Cancel</button>
 
       </form>
 
@@ -98,7 +115,7 @@
 <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title">Lotes</h4>
+        <h4 class="card-title">Productos</h4>
         <p class="card-description">
           {{empresa.nombre}}
         </p>
@@ -110,44 +127,36 @@
                   Imagen
                 </th>
                 <th>
-                  Campo
+                  Codigo
                 </th>
                 <th>
-                  Nombre
+                  Descripcion
                 </th>
                 <th>
-                  Has totales
+                  Tipo
                 </th>
                 <th>
-                  Has productivas
-                </th>
-                <th>
-                  Utilizable
+                  Rubro
                 </th>
               </tr>
             </thead>
             <tbody>
-                {% for lote in lotes %}
+                {% for producto in productos %}
                     <tr>
                         <td class="py-1">
-                        <img src={{lote.image.url}} alt="image"/>
+                        <img src={{producto.image.url}} alt="image"/>
                         </td>
                         <td>
-                         {{lote.campo.nombre}}
+                        <a href="/02/{{producto.id}}">{{producto.codigo}}</a> 
                         </td>
                         <td>
-                        <a href="/0101/{{lote.id}}">{{lote.nombre}}</a> 
+                          {{producto.descripcion}}
                         </td>
                         <td>
-                        {{lote.ha_totales}}
+                          {{producto.tipo}}
                         </td>
                         <td>
-                        {{lote.ha_productivas}}
-                        </td>
-                        <td>
-                        <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" style="width: 50%" aria-valuenow="{{lote.ha_productivas}}" aria-valuemin="0" aria-valuemax="{{lote.ha_totales}}"></div>
-                        </div>
+                        {{producto.rubro}}
                         </td>
                     </tr>
                 {% endfor %}
@@ -157,26 +166,26 @@
       </div>
     </div>
   </div>
-    <script type="text/javascript">
-        const archivo = document.getElementById("id_image");
-        const preview = document.getElementById("id_preview");
-        archivo.addEventListener("change", function() { 
-            getImgData();
-        });
-        function getImgData() {
-            const files = archivo.files[0];
-            if (files) {
-              const fileReader = new FileReader();
-              fileReader.readAsDataURL(files);
-              fileReader.addEventListener("load", function () {
-                preview.src = this.result;
-                {% comment %} preview.style.display = "block";
-                preview.innerHTML = '<img src="' + this.result + '" />'; {% endcomment %}
-              });    
-            }
-          }        
+  <script type="text/javascript">
+    const archivo = document.getElementById("id_image");
+    const preview = document.getElementById("id_preview");
+    archivo.addEventListener("change", function() { 
+        getImgData();
+    });
+    function getImgData() {
+        const files = archivo.files[0];
+        if (files) {
+          const fileReader = new FileReader();
+          fileReader.readAsDataURL(files);
+          fileReader.addEventListener("load", function () {
+            preview.src = this.result;
+            {% comment %} preview.style.display = "block";
+            preview.innerHTML = '<img src="' + this.result + '" />'; {% endcomment %}
+          });    
+        }
+      }        
+</script>
 
-    </script>
 {% endblock %}
 {% block nav %}
 {% include 'nav_home.html' %}
