--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -11,7 +11,8 @@
   <link rel="stylesheet" href="{% static 'vendors/feather/feather.css' %}">
   <link rel="stylesheet" href="{% static 'vendors/ti-icons/css/themify-icons.css' %}">
   <link rel="stylesheet" href="{% static 'vendors/css/vendor.bundle.base.css' %}">
-  <!-- endinject -->
+  <link rel="stylesheet" href="{% static 'node_modules/mdi/font/css/materialdesignicons.min.css' %}"/>
+<!-- endinject -->
   <!-- Plugin css for this page -->
   {% block plugin_css %}
   {% endblock %}
