--- a/core/templates/nav_home.html
+++ b/core/templates/nav_home.html
@@ -13,7 +13,7 @@
   </li>
   <li class="nav-item">
     <a class="nav-link" data-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
-      <i class="icon-columns menu-icon"></i>
+      <i class="icon-tag menu-icon"></i>
       <span class="menu-title">Productos</span>
       <i class="menu-arrow"></i>
     </a>
@@ -27,13 +27,13 @@
   </li>
   <li class="nav-item">
     <a class="nav-link" data-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts">
-      <i class="icon-bar-graph menu-icon"></i>
-      <span class="menu-title">Charts</span>
+      <i class="icon-eye menu-icon"></i>
+      <span class="menu-title">Planificacion</span>
       <i class="menu-arrow"></i>
     </a>
     <div class="collapse" id="charts">
       <ul class="nav flex-column sub-menu">
-        <li class="nav-item"> <a class="nav-link" href="pages/charts/chartjs.html">ChartJs</a></li>
+        <li class="nav-item"> <a class="nav-link" href="\03">Costo de produccion</a></li>
       </ul>
     </div>
   </li>
