--- a/core/templates/vista_lote.html
+++ b/core/templates/vista_lote.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block plugin_css%}
+<link rel="stylesheet" href="{% static 'vendors/datatables.net-bs4/dataTables.bootstrap4.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'js/select.dataTables.min.css' %}">
 {% endblock %}                          
 {% block content %} 
 {% include 'mensajes.html' %}
@@ -103,7 +105,7 @@
           {{empresa.nombre}}
         </p>
         <div class="table-responsive">
-          <table class="table table-striped">
+          <table id='id_tabla' class="table table-striped">
             <thead>
               <tr>
                 <th>
@@ -158,24 +160,33 @@
     </div>
   </div>
     <script type="text/javascript">
-        const archivo = document.getElementById("id_image");
-        const preview = document.getElementById("id_preview");
-        archivo.addEventListener("change", function() { 
-            getImgData();
-        });
-        function getImgData() {
-            const files = archivo.files[0];
-            if (files) {
-              const fileReader = new FileReader();
-              fileReader.readAsDataURL(files);
-              fileReader.addEventListener("load", function () {
-                preview.src = this.result;
-                {% comment %} preview.style.display = "block";
-                preview.innerHTML = '<img src="' + this.result + '" />'; {% endcomment %}
-              });    
-            }
-          }        
-
+      const archivo = document.getElementById("id_image");
+      const preview = document.getElementById("id_preview");
+      archivo.addEventListener("change", function() { 
+          getImgData();
+      });
+      function getImgData() {
+          const files = archivo.files[0];
+          if (files) {
+            const fileReader = new FileReader();
+            fileReader.readAsDataURL(files);
+            fileReader.addEventListener("load", function () {
+              preview.src = this.result;
+              {% comment %} preview.style.display = "block";
+              preview.innerHTML = '<img src="' + this.result + '" />'; {% endcomment %}
+            });    
+          }
+      }        
+      window.addEventListener('load', async() => {
+        const opciones = {
+          columnDefs: [
+            { orderable: false, targets: [0, 5]},
+          ],
+          pageLength: 4,
+        }
+        dataTable = $("#id_tabla").DataTable(opciones );
+      });
+              
     </script>
 {% endblock %}
 {% block nav %}
@@ -183,6 +194,9 @@
 {% endblock %}
 
 {% block plugin_js %}
+<script src="{% static 'vendors/datatables.net/jquery.dataTables.js' %}"></script>
+<script src="{% static 'vendors/datatables.net-bs4/dataTables.bootstrap4.js' %}"></script>
+<script src="{% static 'js/dataTables.select.min.js' %}"></script>
 {% endblock %}
 
 {% block custom_js %}
