--- a/core/templates/editar_costo_prod.html
+++ b/core/templates/editar_costo_prod.html
@@ -64,9 +64,21 @@
 <div class="col-lg-12 grid-margin stretch-card">
   <div class="card">
     <div class="card-body">
-      <h4 class="card-title">Costos historicos</h4>
+      <h4 class="card-title">Detalle</h4>
       <p class="card-description">
-        {{empresa.nombre}}
+        <div class="row">
+          <div class="col-10">
+            {{empresa.nombre}}
+          </div>
+          <div class="col-2">
+            <select class="js-example-basic-single w-100" name="" id="id_historico">
+              <option value=-1>(opcional) seleccione precarga</option>
+              {% for his  in lista_historica  %}
+                <option value={{his.id}}>{{his.nombre}}</option>
+              {% endfor %}
+            </select>
+          </div>
+        </div>
       </p>
       <div class="table-responsive">
         <table class="table table-striped">
@@ -183,7 +195,18 @@
             submitform();
         }
     }
-    
+    window.addEventListener('load', async() => {
+      id_historico.addEventListener('change', async() => {
+        consultar();
+
+      });
+    });
+    function consultar() {
+        confirm2('head', 'Quiere cargar los datos de la base?, IMPORTANTE: los datos se eliminaran y se reemplazaran con los nuevos!', 'cancel', 'ok', function () {
+          alert('si quiero');
+        });
+    }
+
 </script>
 {% endblock %}
 {% block nav %}
@@ -194,6 +217,7 @@
 {% endblock %}
 
 {% block custom_js %}
+<script src="{% static 'js/confirm.js' %}"></script>
 {% endblock %}
 
 
