--- a/core/templates/vista_costo_prod.html
+++ b/core/templates/vista_costo_prod.html
@@ -25,8 +25,10 @@
           </div>
           <div class="col-md-6">
             <div class="form-group row">
-              <label class="col-sm-3 col-form-label">Futuro uso</label>
+              <label class="col-sm-3 col-form-label">Nombre</label>
               <div class="col-sm-9">
+                {{form.nombre}}
+                {{form.nombre.errors}}
               </div>
             </div>
           </div>
@@ -82,6 +84,9 @@
                 Fecha
               </th>
               <th>
+                Nombre
+              </th>
+              <th>
                 Cultivo
               </th>
               <th>
@@ -94,6 +99,9 @@
                   <tr>
                       <td>
                         {{costo.fecha}}
+                      </td>
+                      <td>
+                        <a href="/03/{{costo.id}}">{{costo.nombre}}</a> 
                       </td>
                       <td>
                         <a href="/03/{{costo.id}}">{{costo.cultivo}}</a> 
