--- a/core/templates/editar_costo_prod.html
+++ b/core/templates/editar_costo_prod.html
@@ -234,6 +234,53 @@
                   </td>
               </tr>
             {% endfor %}
+            <tr>
+              <td>
+              </td>
+              <td>
+              </td>
+              <td>
+              </td>
+              <td>
+              </td>
+              <td>
+              </td>
+              <td>
+              </td>
+              <td>
+              </td>
+              <td>
+                <p class='h3'>Total:</p>
+              </td>
+              <td>
+                {{total|moneda}}
+              </td>
+            </tr>
+            <tr>
+              <td>
+              </td>
+              <td>
+              </td>
+              <td>
+              </td>
+              <td>
+              </td>
+              <td>
+              </td>
+              <td>
+                <p class='h4'>Precio dia:</p>
+              </td>
+              <td>
+                {{precio_dia|moneda}}
+              </td>
+              <td>
+                <p class='h4'>Costo</p>
+              </td>
+              <td>
+                {{calculo}} sc/ha
+              </td>
+            </tr>
+
           </tbody>
         </table>
       </div>
