--- a/core/templates/nav_home.html
+++ b/core/templates/nav_home.html
@@ -34,6 +34,7 @@
     <div class="collapse" id="charts">
       <ul class="nav flex-column sub-menu">
         <li class="nav-item"> <a class="nav-link" href="\03">Costo de produccion</a></li>
+        <li class="nav-item"> <a class="nav-link" href="\04">Planificacion</a></li>
       </ul>
     </div>
   </li>
