--- a/core/templates/editar_costo_prod.html
+++ b/core/templates/editar_costo_prod.html
@@ -277,7 +277,7 @@
                 <p class='h4'>Costo</p>
               </td>
               <td>
-                {{calculo}} sc/ha
+                {{calculo|moneda}} sc/ha
               </td>
             </tr>
 
