--- a/core/templates/vista_plani.html
+++ b/core/templates/vista_plani.html
@@ -46,13 +46,32 @@
             </div>
             <div class="col-md-6">
               <div class="form-group row">
-                <label class="col-sm-3 col-form-label">Campaña</label>
+                <label class="col-sm-3 col-form-label">Uso futuro</label>
                 <div class="col-sm-9">
-                    {{form.campana}}
-                    {{form.campana.errors}}
                 </div>
               </div>
             </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group row">
+              <label class="col-sm-3 col-form-label">Campaña</label>
+              <div class="col-sm-9">
+                  {{form.campana}}
+                  {{form.campana.errors}}
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group row">
+              <label class="col-sm-3 col-form-label">Costo</label>
+              <div class="col-sm-9">
+                {{form.costo}}
+                {{form.costo.errors}}
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="row">
